Bug 54197 - Calc single cell filling (Ctrl+D) does not change data at input line
Summary: Calc single cell filling (Ctrl+D) does not change data at input line
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:6.1.0 target:6.0.3 target:6.2.0
Keywords:
: 64218 66671 68688 68915 73192 89142 90779 91876 104297 105658 116362 (view as bug list)
Depends on:
Blocks: Calc-Formula-Bar
  Show dependency treegraph
 
Reported: 2012-08-29 09:39 UTC by Arnis Rozentals
Modified: 2019-12-07 18:43 UTC (History)
21 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Arnis Rozentals 2012-08-29 09:39:57 UTC
There is a problem with newly implemented (version 3.6.0):
["Ctrl+D" fills down in more familiar ways, filling with contents of the cell above if no cell is selected ...]

After fill-in single cell the data at input line is not changed. There is also a problem when using F2 (direct cell input) it is working with old cell data.
Comment 1 Jean-Baptiste Faure 2012-09-01 09:06:14 UTC
Works as expected for me in LibreOffice 3.6.1 under Ubuntu 11.10.

Please provide à step by step scenario to reproduce the problem.

Best regards. JBF
Comment 2 Arnis Rozentals 2012-09-05 14:04:41 UTC
In LibreOffice 3.6.1 under Windows XP:

1. go to cell A1 enter any text
2. go to cell A2 press Ctrl+D
The same text as above is displayed at cell A2, BUT input line is still blank
3. press F2 the previous content of A2 is offered for editing
Comment 3 pierre-yves samyn 2012-09-15 15:49:33 UTC
Hello

I reproduce with Version 3.6.2.1 (Build ID: ba822cc) & Windows 7 64bits

Steps to reproduce:

1. File> New> Spreadsheet
2. In A1 type Test<Enter>

A2 selected

3. <Ctrl><D>

Expected results:
Test in A2
A2 selected
Test in Formula Bar

Actual results:
Test in A2
A2 selected
Formula bar empty

4.<F2>

Expected results:
Cell in "edit mode", cursor after Test

Actual results:
Cell in "edit mode", cell *seems* empty, cursor at the begining

5. <Enter>
A3 selected, Test in A2 

As reporter said, this problem may be more troublesome in the following cases:

1. File> New> Spreadsheet
2. In A1 type Test<Enter>
   A2 selected
3. Type Other<Enter>
4. Select A2
5. <CTRL><D>

Expected results:
Test in A2
A2 selected
Test in Formula Bar

Actual results:
Test in A2
A2 selected
Formula bar: Other

6. <F2>

Expected results:
Cell in "edit mode", cursor after Test

Actual results:
Cell in "edit mode", cell *displays* Other

7. <ENTER>

Test in A2...

Regards
Pierre-Yves
Comment 4 QA Administrators 2013-05-29 14:00:22 UTC Comment hidden (obsolete)
Comment 5 Arnis Rozentals 2013-05-30 05:53:52 UTC
Please see pierre-yves samyn comment from 2012-09-15 15:49:33 UTC.
LibreOffice 4.0.3 still does not work as expected.
Comment 6 ign_christian 2013-06-09 02:52:46 UTC
I agree this issue quite disrupting. If we continue writing after doing step 6 on comment 3 then hit Enter, what we've done with Ctrl-D ignored.

Confirm reproducible on LO 4.0.4.1 (Win7 32bit)
Comment 7 ign_christian 2013-07-08 01:59:06 UTC
*** Bug 66671 has been marked as a duplicate of this bug. ***
Comment 8 ign_christian 2013-08-29 02:10:37 UTC
*** Bug 68688 has been marked as a duplicate of this bug. ***
Comment 9 ign_christian 2013-09-04 09:12:13 UTC
*** Bug 68915 has been marked as a duplicate of this bug. ***
Comment 10 ign_christian 2013-11-20 07:59:21 UTC
*** Bug 64218 has been marked as a duplicate of this bug. ***
Comment 11 tommy27 2014-01-01 12:41:34 UTC
*** Bug 73192 has been marked as a duplicate of this bug. ***
Comment 12 tommy27 2014-01-01 12:44:34 UTC
issue introduced in 3.6.0.4 release and still present in 4.1.4.2 and 4.2.0 RC1.
I add Calc expert to CC list.
Comment 13 Vasiliy Danilov 2014-03-13 15:27:32 UTC
The bug still in 4.2.2 release, just checked it.
Comment 14 Arnis Rozentals 2014-03-14 13:43:28 UTC
Maybe the rise of importance level will change something according this problem :(
Comment 15 Joel Madero 2014-03-14 14:05:36 UTC
Please do not change the upper stuff without knowing the policies. Raising the priority of your own bug is bad form and is not the way to raise awareness. Also version field refers to the oldest version we can confirm on. Reversing changes
Comment 16 Cor Nouws 2015-02-05 21:26:32 UTC
*** Bug 89142 has been marked as a duplicate of this bug. ***
Comment 17 raal 2015-06-08 18:52:29 UTC
*** Bug 91876 has been marked as a duplicate of this bug. ***
Comment 18 alex 2015-07-08 03:08:07 UTC
Came to report it as has been annoying me for a month or so.  Found existing bug.
Can confirm still present in 5.0.0.1 Build ID: 00m0(Build:1) from Opensuse LibreOffice:Factory repo, and in 4.4.3.2 for Windows.
Comment 19 Aron Budea 2016-12-02 18:07:48 UTC
*** Bug 104297 has been marked as a duplicate of this bug. ***
Comment 20 Aron Budea 2016-12-02 18:08:07 UTC
*** Bug 90779 has been marked as a duplicate of this bug. ***
Comment 21 Gilward Kukel 2017-02-02 22:51:47 UTC
*** Bug 105658 has been marked as a duplicate of this bug. ***
Comment 22 Eike Rathke (retired, only occasionally showing up) 2018-03-01 18:53:57 UTC
Investigating.
Comment 23 Commit Notification 2018-03-01 21:43:51 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f97622381b77a0b14af5600ef4179f277723d50f

Resolves: tdf#54197 update input line with new cell content after Ctrl+D fill

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 24 Eike Rathke (retired, only occasionally showing up) 2018-03-01 22:10:49 UTC
And http://cgit.freedesktop.org/libreoffice/core/commit/?id=59587251357973dc9139e7c4038c1f1563b83be4
Comment 25 Commit Notification 2018-03-01 22:13:35 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c348476a2ca16d6c32d2d17a2cae5f59e967bf6d

Related: tdf#54197 copy AutoSpellData from adjacent if no selection

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 26 Eike Rathke (retired, only occasionally showing up) 2018-03-01 22:55:07 UTC
Pending review https://gerrit.libreoffice.org/50608 for 6-0
Comment 27 Eike Rathke (retired, only occasionally showing up) 2018-03-12 12:25:56 UTC
*** Bug 116362 has been marked as a duplicate of this bug. ***
Comment 28 Arnis Rozentals 2018-03-13 17:01:37 UTC
Tested on:
Version: 6.1.0.0.alpha0+ (x64)
Build ID: 4647057a077824cd6782be82b2d13e06fa76704b
CPU threads: 4; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-03-13_02:03:59

Works as expected!

Many Thanks to Eike Rathke!
Comment 29 Commit Notification 2018-03-15 16:03:25 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1c354750f9e52bfa241e3edffeb6d84dd8b92e5e&h=libreoffice-6-0

Resolves: tdf#54197 update input line with new cell content after Ctrl+D fill

It will be available in 6.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 30 Commit Notification 2018-10-29 20:22:00 UTC
Zdeněk Crhonek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/993948678e7a78c7c91e2c2728a9b7182cb2bc79%5E%21

uitest for bug tdf#54197

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 31 bjlockie 2018-10-29 21:53:54 UTC
(In reply to Commit Notification from comment #29)
> Eike Rathke committed a patch related to this issue.
> It has been pushed to "libreoffice-6-0":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=1c354750f9e52bfa241e3edffeb6d84dd8b92e5e&h=libreoffice-6-0
> 
> Resolves: tdf#54197 update input line with new cell content after Ctrl+D fill
> 
> It will be available in 6.0.3.
> 
> The patch should be included in the daily builds available at
> http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> http://wiki.documentfoundation.org/Testing_Daily_Builds
> 
> Affected users are encouraged to test the fix and report feedback.

I see it works in 6.0.6.2
Comment 32 raal 2019-12-07 18:43:54 UTC
The test exist, set status to Verified.