Resolves: tdf#54197 update input line with new cell content after Ctrl+D fill

This is a combination of 3 commits.

Resolves: tdf#54197 update input line with new cell content after Ctrl+D fill

... and invalidate cell slots.

Related: tdf#115297 copy AutoSpellData from row above if no selection

Related: tdf#54197 copy AutoSpellData from adjacent if no selection

62ebb3579d5c05e71ca10879ae0ade5bda3bbeba
82223a64f5c5ec3c98dba390d88af8369a322bd7

Change-Id: Icbe7784430f7ddeed8fa0bc56352269447ee8cbb